fixed text color alignment

--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ input {
   font-size: 17px;
   line-height: 1.75;
   font-weight: 400;
-  letter-spacing: -0.022em;
-  margin: 2em;
+  margin: 10px 0 10px 0;
   background-color: rgb(209, 209, 209);
 }
 /* Families */
@@ -89,6 +88,12 @@ footer > a {
   margin: 5px;
   padding: 10px;
 }
+
+legend {
+  color: black;
+  font-weight: 250;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -115,6 +120,10 @@ footer > a {
   margin: 1em;
 }
 
+label {
+  font-weight: 225;
+}
+
 button {
   --bg-color: rgb(182, 182, 182);
   --fg-color: rgb(90, 70, 202);
@@ -126,6 +135,7 @@ button {
   border-radius: 0.5rem;
   font-size: 1rem;
   transition: 300ms;
+  margin: 10px 0 10px 0;
 }
 
 button:hover {
@@ -186,4 +196,9 @@ button:hover {
 
 .text-dark {
   color: black;
+}
+
+.text-colors {
+  display: flex;
+  justify-content: space-evenly;
 }
